# MaratonaScore

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build_log.txt  config.json  ratings_v2.json
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
cli/: CMakeLists.txt
cli/include/cli/commands/: Command.hpp
cli/src/: main.cpp
data/: Rank-Contest 1.xlsx  Rank-Contest 10.xlsx  Rank-Contest 2.xlsx  Rank-Contest 3.xlsx  Rank-Contest 4.xlsx  Rank-Contest 5.xlsx  Rank-Contest 6.xlsx  Rank-Contest 7.xlsx  Rank-Contest 8.xlsx  Rank-Contest 9.xlsx  Rank-Homework 1 - STL.xlsx  Rank-Homework 10 - Geometria.xlsx  Rank-Homework 2 - Buscas.xlsx  Rank-Homework 3 - Grafos 1.xlsx  Rank-Homework 4 - Grafos 2.xlsx  Rank-Homework 5 - DP 1.xlsx  Rank-Homework 6 - DP 2.xlsx  Rank-Homework 7 - Number Theory.xlsx  Rank-Homework 8 - Range Query.xlsx  Rank-Homework 9 - Strings.xlsx  contest-01.json  contest-02.json  contest-03.json  contest-04.json  contest-05.json  contest-06.json  contest-07.json  contest-08.json  contest-09.json  contest-10.json  homework-01.json  homework-02.json  homework-03.json  homework-04.json  homework-05.json  homework-06.json  homework-07.json  homework-08.json  homework-09.json  homework-10.json
examples/: batch-conversions.txt  batch-processing.txt
gui/: CMakeLists.txt
include/MaratonaScore/cli/: CLIHandler.h  ExcelConverter.h  OutputFormatter.h
include/MaratonaScore/core/models/: CompetitorData.h  ContestPerformance.h  ProcessedContest.h  ScoringConfig.h
include/MaratonaScore/core/persistence/: DatabaseManager.h
include/MaratonaScore/core/services/: ContestProcessor.h  RatingSystem.h  ScoreCalculator.h
include/MaratonaScore/gui/: AddContestDialog.h  BlacklistDialog.h  ConfigDialog.h  ContestDetailWidget.h  ContestsListWidget.h  MainWindow.h  RankingTableWidget.h
legacy/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/maratona_score/models/: Contest.hpp  Contestant.hpp  Performance.hpp  Scoreboard.hpp
lib/include/maratona_score/parser/: FinalParser.hpp  ScoreboardParser.hpp
lib/include/maratona_score/score/: getScore.hpp
lib/include/maratona_score/utils/: Blacklist.hpp  Settings.hpp
lib/src/models/: Contest.cpp  Contestant.cpp  Performance.cpp  Scoreboard.cpp
lib/src/parser/: FinalParser.cpp  ScoreboardParser.cpp
lib/src/score/: getScore.cpp
lib/src/utils/: Blacklist.cpp  Settings.cpp  StringUtils.cpp
sample/data/: 1.xlsx  2.xlsx  3.xlsx  4.xlsx  H1.xlsx  H2.xlsx  H3.xlsx  H4.xlsx
sample/settings/: blacklist.txt
scripts/: vJudgeParse.py
src/: CMakeLists.txt  main.cpp
src/cli/: CLIHandler.cpp  CMakeLists.txt  ExcelConverter.cpp  OutputFormatter.cpp
src/core/: CMakeLists.txt
src/core/persistence/: DatabaseManager.cpp
src/core/services/: ContestProcessor.cpp  RatingSystem.cpp  ScoreCalculator.cpp
src/gui/: AddContestDialog.cpp  BlacklistDialog.cpp  CMakeLists.txt  ConfigDialog.cpp  ContestDetailWidget.cpp  ContestsListWidget.cpp  MainWindow.cpp  RankingTableWidget.cpp  main_gui.cpp
src/include/: export.hpp
src/include/models/: Contest.hpp  Contestant.hpp  Performance.hpp  Scoreboard.hpp
src/include/parser/: FinalParser.hpp  ScoreboardParser.hpp
src/include/score/: getScore.hpp
src/include/utils/: Blacklist.hpp  Settings.hpp  StringUtils.hpp
src/src/models/: Contest.cpp  Contestant.cpp  Performance.cpp  Scoreboard.cpp
src/src/parser/: FinalParser.cpp  ScoreboardParser.cpp
src/src/score/: getScore.cpp
src/src/utils/: Blacklist.cpp  Settings.cpp  StringUtils.cpp
templates/: README.md
templates/data/: finals.txt
templates/settings/: blacklist.txt  config.yaml
tests/: CMakeLists.txt
