# ============================================================================
# MaratonaScore Tests
# ============================================================================
# Unit and integration tests
# ============================================================================

# TODO: Implementar testes quando necessário
# Placeholder para manter estrutura consistente

if(NOT BUILD_TESTS)
    return()
endif()

message(STATUS "Tests build is enabled but not yet implemented")
message(STATUS "Skipping test targets...")

# Future implementation with Google Test:
#
# FetchContent_Declare(
#     googletest
#     GIT_REPOSITORY https://github.com/google/googletest.git
#     GIT_TAG        v1.14.0
# )
# FetchContent_MakeAvailable(googletest)
#
# # Library tests
# file(GLOB_RECURSE LIB_TEST_SOURCES
#     CONFIGURE_DEPENDS
#     "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.cpp"
# )
#
# add_executable(lib_tests ${LIB_TEST_SOURCES})
# target_link_libraries(lib_tests
#     PRIVATE
#         MaratonaScoreLib
#         GTest::gtest_main
# )
# gtest_discover_tests(lib_tests)
#
# # CLI tests
# file(GLOB_RECURSE CLI_TEST_SOURCES
#     CONFIGURE_DEPENDS
#     "${CMAKE_CURRENT_SOURCE_DIR}/cli/*.cpp"
# )
#
# add_executable(cli_tests ${CLI_TEST_SOURCES})
# target_link_libraries(cli_tests
#     PRIVATE
#         MaratonaScoreLib
#         GTest::gtest_main
# )
# gtest_discover_tests(cli_tests)
